2009-04-16  Xiaomei Ji  <xji@chromium.org>

Reviewed by Simon Fraser.

        Fix https://bugs.webkit.org/show_bug.cgi?id=24527
        caret does not paint the first time you focus on a 0px right padding RTL div

        Test: fast/forms/caret-rtl.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::localCaretRect): When calculating x-axis if
        alignment is alignRight, we need to subtract the caretWidth so that the
        caret at IntRect(x, y, caretWidth, height) is inside the block.



Canonical link: https://commits.webkit.org/34637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42585 268f45cc-cd09-0410-ab3c-d52691b4dbfc